--- a/camerafront/src/app/main/products/products-home/products-home.component.html
+++ b/camerafront/src/app/main/products/products-home/products-home.component.html
@@ -1,1 +1,9 @@
-<p>products-home works!</p>
+<div fxFill fxLayout="column" fxLayoutAlign="start">
+    <o-table attr="productsTable" service="products" entity="product" keys="id_product" 
+      columns="id_product;product_name;price;status;product_type;avaliable"
+      visible-columns="PHOTO;id_product;product_name;price;status;product_type;avaliable" query-rows="20">
+      <o-table-column attr="PHOTO" title="PHOTO" orderable="no" searchable="no" type="image" avatar="yes" 
+        empty-image="assets/images/no-image.png" image-type="base64"></o-table-column>
+      <o-table-column attr="id_product" title="ID de Producto" width="100px"></o-table-column>
+    </o-table>
+    </div>
