--- a/camerafront/src/app/main/products/products-home/products-home.component.html
+++ b/camerafront/src/app/main/products/products-home/products-home.component.html
@@ -1,9 +1,33 @@
-<div fxFill fxLayout="column" fxLayoutAlign="start">
-    <o-table attr="productsTable" service="products" entity="product" keys="id_product" 
-      columns="id_product;product_name;price;status;product_type;avaliable"
-      visible-columns="PHOTO;id_product;product_name;price;status;product_type;avaliable" query-rows="20">
-      <o-table-column attr="PHOTO" title="PHOTO" orderable="no" searchable="no" type="image" avatar="yes" 
-        empty-image="assets/images/no-image.png" image-type="base64"></o-table-column>
-      <o-table-column attr="id_product" title="ID de Producto" width="100px"></o-table-column>
-    </o-table>
-    </div>
+
+  <o-grid #grid attr="productGrid" title="Productos Chulos" 
+    cols="4" query-rows="8" show-page-size="true" page-size-options="4;8;16"
+  orderable="true" quick-filter="true" grid-item-height="1:3" sortable-columns="id_product;product_name;price"
+  sort-column="" controls="true" refresh-button="true" insert-button="false"
+  pagination-controls="false" gutter-size="1px" fixed-header="yes"  [ngStyle]="{'height':'600px'}"
+  service="product" entity="product" keys="id_product" 
+      columns="id_product;product_name;price;status;product_type;avaliable">
+      <!-- visible-columns="PHOTO;id_product;product_name;price;status;product_type;avaliable"  -->
+>
+  <o-grid-item *ngFor="let list of grid.dataArray">
+    <o-column layout-padding class="container-item">
+      <!-- <img [src]="assets/images/no-image" style="margin-top:8px"> -->
+      <img src="assets/images/no-image.png" alt="Descripción de la imagen">
+      <h4>{{ list.product_name }}</h4>
+      <div class="price">
+        <mat-icon>price</mat-icon> <span> {{ list.price }} </span>
+      </div>
+      <div class="status">
+        <mat-icon>email</mat-icon> <span>{{ list.status }} </span>
+      </div>
+      <div class="product_type">
+        <mat-icon>domain</mat-icon> <span> {{ list.product_type }} </span>
+      </div>
+      <div class="avaliable">
+        <mat-icon>website</mat-icon> <span>{{list.avaliable?"Disponible":"No disponible"}}</span>
+      </div>
+      <div class="body">
+        {{list.body}}
+      </div>
+    </o-column>
+  </o-grid-item>
+</o-grid>
