--- a/camerafront/src/app/main/products/products-home/products-home.component.html
+++ b/camerafront/src/app/main/products/products-home/products-home.component.html
@@ -1,5 +1,5 @@
 
-  <o-grid #grid attr="productGrid" title="Productos Chulos" 
+  <o-grid #grid attr="productGrid" title="Productos en alquiler" 
   cols="4" query-rows="8" show-page-size="true" page-size-options="4;8;16"
   orderable="true" quick-filter="true" grid-item-height="1:3" sortable-columns="id_product;product_name;price"
   sort-column="" controls="true" refresh-button="true" insert-button="false"
@@ -14,16 +14,15 @@
       <img src="assets/images/no-image.png" alt="Descripción de la imagen">
       <h4>{{ list.product_name }}</h4>
       <div class="price">
-        <mat-icon>price</mat-icon> <span> {{ list.price }} </span>
+        <mat-icon>euro</mat-icon> <span> {{ list.price }} € </span>
       </div>
-      <div class="status">
-        <mat-icon>email</mat-icon> <span>{{ list.status }} </span>
+      <div class="status"><b>Estado: </b><span>{{ list.status }} </span>
       </div>
-      <div class="product_type">
-        <mat-icon>domain</mat-icon> <span> {{ list.product_type }} </span>
+      <div class="product_type"> <b>Producto: </b>
+       <span>{{ list.product_type }} </span>
       </div>
       <div class="avaliable">
-        <mat-icon>website</mat-icon> <span>{{list.avaliable?"Disponible":"No disponible"}}</span>
+        <span><b>Disponible: </b> </span> <span><mat-icon>{{list.avaliable?"check_circle":"cancel" }}</mat-icon></span>
       </div>
       <div class="body">
         {{list.body}}
