--- a/camerafront/src/app/main/products/products-home/products-home.component.html
+++ b/camerafront/src/app/main/products/products-home/products-home.component.html
@@ -1,34 +1,68 @@
-
-  <o-grid #grid attr="productGrid" title="Productos en alquiler" 
-  cols="4" query-rows="8" show-page-size="true" page-size-options="4;8;16"
-  orderable="true" quick-filter="true" grid-item-height="1:3" sortable-columns="id_product;product_name;price"
-  sort-column="" controls="true" refresh-button="true" insert-button="false"
-  pagination-controls="false" gutter-size="1px" fixed-header="yes"  [ngStyle]="{'height':'600px'}"
-  service="product" entity="product" keys="id_product" 
-      columns="id_product;product_name;price;status;product_type;avaliable;main_photo">
-      <!-- visible-columns="PHOTO;id_product;product_name;price;status;product_type;avaliable"  -->
+<o-grid
+  #grid
+  attr="productGrid"
+  title="Productos en alquiler"
+  cols="4"
+  query-rows="8"
+  show-page-size="true"
+  page-size-options="4;8;16"
+  orderable="true"
+  quick-filter="true"
+  grid-item-height="1:3"
+  sortable-columns="id_product;product_name;price"
+  sort-column=""
+  controls="true"
+  refresh-button="true"
+  insert-button="false"
+  pagination-controls="false"
+  gutter-size="1px"
+  fixed-header="yes"
+  [ngStyle]="{ height: '600px' }"
+  service="product"
+  entity="product"
+  keys="id_product"
+  columns="id_product;product_name;price;status;product_type;avaliable;main_photo"
 >
+  <!-- visible-columns="PHOTO;id_product;product_name;price;status;product_type;avaliable"  -->
+  >
   <o-grid-item *ngFor="let list of grid.dataArray">
     <o-column layout-padding class="container-item">
       <!-- <img [src]="assets/images/no-image" style="margin-top:8px"> -->
-      <img src="assets/images/no-image.png" alt="Descripción de la imagen" avatar="no" empty-image="assets/images/no-image.png">
+      <img
+        src="assets/images/no-image.png"
+        alt="Descripción de la imagen"
+        avatar="no"
+        empty-image="assets/images/no-image.png"
+      />
       <!-- <img attr="EMPLOYEEPHOTO" title="EMPLOYEEPHOTO" orderable="no" searchable="no" type="image" avatar="no" empty-image="assets/images/no-image.png"
       image-type="base64" width="150px"> -->
       <!-- <o-image attr="main_photo" [data]= {{ list.main_photo }}></o-image> -->
       <h4>{{ list.product_name }}</h4>
       <div class="price">
-        <mat-icon>euro</mat-icon> <span> {{ list.price }} € </span>
+        <b>Precio: </b> <span> {{ list.price }} € </span>
       </div>
-      <div class="status"><b>Estado: </b><span>{{ list.status }} </span>
+      <div class="status">
+        <b>Estado: </b><span>{{ list.status }} </span>
       </div>
-      <div class="product_type"> <b>Producto: </b>
-       <span>{{ list.product_type }} </span>
+      <div class="product_type">
+        <b>Producto: </b>
+        <span>{{ list.product_type }} </span>
       </div>
       <div class="avaliable">
-        <span><b>Disponible: </b> </span> <span><mat-icon>{{list.avaliable?"check_circle":"cancel" }}</mat-icon></span>
+        <span><b>Disponible: </b> </span>
+        <span>
+          <mat-icon
+            [ngClass]="{
+              'green-check': list.avaliable,
+              'red-check': !list.avaliable
+            }"
+          >
+            {{ list.avaliable ? "check_circle" : "cancel" }}
+          </mat-icon>
+        </span>
       </div>
       <div class="body">
-        {{list.body}}
+        {{ list.body }}
       </div>
     </o-column>
   </o-grid-item>
