--- a/camerafront/src/app/main/products/products-home/products-home.component.html
+++ b/camerafront/src/app/main/products/products-home/products-home.component.html
@@ -49,6 +49,9 @@
         <b>Producto: </b>
         <span>{{ list.product_type }} </span>
       </div>
+      <div class="plocation">
+        <b>Provincia: </b><span>{{ list.location }} </span>
+      </div>
       <div class="avaliable">
         <span><b>Disponible: </b> </span>
         <span>
