--- a/camerafront/src/app/main/products/products-home/products-home.component.html
+++ b/camerafront/src/app/main/products/products-home/products-home.component.html
@@ -8,36 +8,24 @@
   page-size-options="4;8;16"
   orderable="true"
   quick-filter="true"
-  grid-item-height="1:3"
-  sortable-columns="id_product;product_name;price"
   sort-column=""
   controls="true"
   refresh-button="true"
   insert-button="false"
   pagination-controls="false"
-  gutter-size="1px"
+  gutter-size="5px"
   fixed-header="yes"
   [ngStyle]="{ height: '600px' }"
   service="product"
   entity="product"
   keys="id_product"
-  columns="id_product;product_name;price;status;product_type;avaliable;main_photo"
->
-  <!-- visible-columns="PHOTO;id_product;product_name;price;status;product_type;avaliable"  -->
-  >
+  columns="id_product;product_name;price;status;product_type;avaliable;main_photo" 
+  visible-columns="main_photo;product_name;price;status;product_type;avaliable">
   <o-grid-item *ngFor="let list of grid.dataArray">
     <o-column layout-padding class="container-item">
-      <!-- <img [src]="assets/images/no-image" style="margin-top:8px"> -->
-      <!-- <img
-        src="assets/images/no-image.png"
-        alt="Descripción de la imagen"
-        avatar="no"
-        empty-image="assets/images/no-image.png"
-      /> -->
-      <!-- <img attr="EMPLOYEEPHOTO" title="EMPLOYEEPHOTO" orderable="no" searchable="no" type="image" avatar="no" empty-image="assets/images/no-image.png"
-      image-type="base64" width="150px"> -->
-      <!-- <o-image attr="main_photo" [data]= {{ list.main_photo }}></o-image> -->
-      <img src="data:image/png;base64,{{list.main_photo}}">
+      <div class="image">
+        <img src="data:image/png;base64,{{list.main_photo}}">
+      </div>
       <h4>{{ list.product_name }}</h4>
       <div class="price">
         <b>Precio: </b> <span> {{ list.price }} € </span>
@@ -56,8 +44,7 @@
             [ngClass]="{
               'green-check': list.avaliable,
               'red-check': !list.avaliable
-            }"
-          >
+            }">
             {{ list.avaliable ? "check_circle" : "cancel" }}
           </mat-icon>
         </span>
