--- a/camerafront/src/app/main/products/products-home/products-home.component.html
+++ b/camerafront/src/app/main/products/products-home/products-home.component.html
@@ -8,6 +8,8 @@
   page-size-options="4;8;16"
   orderable="true"
   quick-filter="true"
+  grid-item-height="1:1"
+  sortable-columns="product_name;price"
   sort-column=""
   controls="true"
   refresh-button="true"
