--- a/camerafront/src/app/main/products/products-home/products-home.component.css
+++ b/camerafront/src/app/main/products/products-home/products-home.component.css
@@ -1,13 +1,13 @@
 .container-item {
   width: 100%;
+  height: 400px;
+  background-color: antiquewhite;
+  border: 1px double black;
+  border-radius: 10px;
   .name {
     margin: 8px 0;
     font-size: 0.9em;
   }
-  .email,
-  .domain,
-  .body,
-  .website {
   /* .image{
     height: 150px;
     width: 150px;
@@ -16,6 +16,7 @@
   .image {
     width: auto; 
     height: 50%; 
+    overflow: hidden; 
   }
   
   .image img {
@@ -24,6 +25,7 @@
   }
   /* img{
     height: 150px;
+    width: 150px;
     display:contents;
   } */
   /* .website {
