Product to Products

--- a/camerafront/src/app/main/products/products-home/products-home.component.html
+++ b/camerafront/src/app/main/products/products-home/products-home.component.html
@@ -18,7 +18,7 @@
   gutter-size="5px"
   fixed-header="yes"
   [ngStyle]="{ height: '600px' }"
-  service="product"
+  service="products"
   entity="product"
   keys="id_product"
   columns="id_product;product_name;price;status;product_type;avaliable;main_photo" 
