Mis productos a medias

--- a/camerafront/src/app/main/profile/myproducts-home/myproducts-home.component.html
+++ b/camerafront/src/app/main/profile/myproducts-home/myproducts-home.component.html
@@ -16,9 +16,13 @@ pagination-controls="no" edition-mode="none" detail-mode="none" horizontal-scrol
 <!-- Custom definition columns -->
 <o-table-column attr="main_photo" orderable="no" searchable="no" width="64px">
   <o-table-cell-renderer-image image-type="base64" empty-image="assets/images/no-image.png" avatar="yes"> </o-table-cell-renderer-image>
-</o-table-column>
-<!-- <o-table-column attr="NOTES" title="NOTES" multiline="no" width="300px" tooltip="yes"></o-table-column>
-<o-table-column attr="action" width="64px">
+<!-- </o-table-column>
+<o-table-column attr="avaliable" title="avaliable" type="avaliable"
+true-value-type="string" true-value="YES"
+false-value-type="icon" false-value="not_interested">
+</o-table-column> -->
+<!-- <o-table-column attr="NOTES" title="NOTES" multiline="no" width="300px" tooltip="yes"></o-table-column> -->
+<!-- <o-table-column attr="action" width="64px">
   <o-table-cell-renderer-action (onClick)="actionClick()" icon="storage"></o-table-cell-renderer-action>
 </o-table-column> -->
 </o-table>
