--- a/camerafront/src/app/main/profile/myproducts-home/myproducts-home.component.html
+++ b/camerafront/src/app/main/profile/myproducts-home/myproducts-home.component.html
@@ -17,6 +17,7 @@ pagination-controls="no" edition-mode="none" detail-mode="none" horizontal-scrol
 <o-table-column attr="main_photo" orderable="no" searchable="no" width="64px">
   <o-table-cell-renderer-image image-type="base64" empty-image="assets/images/no-image.png" avatar="yes"> </o-table-cell-renderer-image>
 </o-table-column>
+<o-table-column attr="avaliable" title="avaliable" type="boolean" render-true-value="check_circle" render-false-value="highlight_off" render-type="icon" boolean-type="string"></o-table-column>
 <!-- <o-table-column attr="avaliable" title="avaliable" type="avaliable"
 true-value-type="string" true-value="YES"
 false-value-type="icon" false-value="not_interested">
