--- a/camerafront/src/app/main/profile/myproducts-home/myproducts-home.component.html
+++ b/camerafront/src/app/main/profile/myproducts-home/myproducts-home.component.html
@@ -44,7 +44,7 @@
     render-true-value="check_circle"
     render-false-value="highlight_off"
     render-type="icon"
-    boolean-type="string"
+    boolean-type="boolean"
   ></o-table-column>
   <!-- <o-table-column attr="avaliable" title="avaliable" type="avaliable"
 true-value-type="string" true-value="YES"
