Product insert Furruling

--- a/camerafront/src/app/main/profile/myproducts-detail/myproducts-detail.component.html
+++ b/camerafront/src/app/main/profile/myproducts-detail/myproducts-detail.component.html
@@ -1,7 +1,8 @@
-<o-form service="products" entity="product" keys="id_product"
-  columns="id_product;product_name;price;status;product_type;avaliable;main_photo;plocation;tuser_user_"
-  show-header-navigation="no">
-  <o-text-input oHidden attr="id_product" sql-type="INTEGER" enabled="no"  ></o-text-input>
+<o-form service="products" entity="product" keys="id_product" columns="id_product;product_name;price;status;product_type;avaliable;main_photo;plocation;tuser_user_"
+  
+  show-header-navigation="no" >
+  <!-- oHidden -->
+  <o-text-input  enabled="no" attr="id_product" sql-type="INTEGER"  ></o-text-input>
   <o-row>
     <o-column>
 
