--- a/camerafront/src/app/main/profile/myproducts-home/myproducts-home.component.html
+++ b/camerafront/src/app/main/profile/myproducts-home/myproducts-home.component.html
@@ -1,11 +1,11 @@
-<o-form-layout-manager title="{{'MYPRODUCTS' | oTranslate }}" separator=" " mode="tab" label-columns="product_name">
+<o-form-layout-manager title="{{'MYPRODUCTS' | oTranslate }}" separator=" " mode="tab" label-columns="product_name" >
   <div fxFill>
-    <o-table fxFlex #table attr="table" title="Table" service="products" entity="product" keys="id_product"
+    <o-table fxFlex #table attr="table" title="Table" service="products" entity="myProduct" keys="id_product"
       columns="id_product;product_name;price;status;product_type;avaliable;main_photo;plocation;tuser_user_"
       visible-columns="main_photo;product_name;price;status;product_type;avaliable" quick-filter="true" 
       filter-case-sensitive="false" columns-visibility-button="true" select-all-checkbox="true" show-buttons-text="true"
       controls="true" show-title="true" 
-      horizontal-scroll="false" auto-adjust="false" virtual-scroll="no">
+      horizontal-scroll="false" auto-adjust="false" virtual-scroll="no" >
       <!-- Filter columns -->
       <o-table-columns-filter columns="status;id_product;product_name"></o-table-columns-filter>
       <!-- Custom definition button -->
