--- a/camerafront/src/app/main/profile/myproducts-detail/myproducts-detail.component.html
+++ b/camerafront/src/app/main/profile/myproducts-detail/myproducts-detail.component.html
@@ -15,7 +15,10 @@
       </o-row>
       <o-row>
         <o-text-input class="input-padding" attr="status" fxFlex="40" required="yes"></o-text-input>
-        <o-text-input attr="avaliable" ></o-text-input>
+        <o-checkbox attr="avaliable" read-only="no"></o-checkbox>
+        <!-- <o-text-input attr="avaliable" ></o-text-input>[data]="true" -->
+        <!-- <o-text-input attr="avaliable" title="avaliable" type="boolean" render-true-value="check_circle"
+        render-false-value="highlight_off" render-type="icon" boolean-type="boolean"></o-text-input> -->
       </o-row>
       <o-row>
         <o-text-input class="input-padding" attr="product_type" fxFlex="40" required="yes"></o-text-input>
