--- a/camerafront/src/app/main/profile/myproducts-new/myproducts-new.component.html
+++ b/camerafront/src/app/main/profile/myproducts-new/myproducts-new.component.html
@@ -10,8 +10,9 @@
         <!-- <o-date-input attr="STARTDATE" fxFlex="20"></o-date-input> -->
       </o-row>
       <o-row>
-        <o-text-input class="input-padding" attr="status" fxFlex="40" required="yes"></o-text-input>
-        <o-text-input attr="avaliable" ></o-text-input>
+        <!-- <o-text-input class="input-padding" attr="status" fxFlex="40" required="yes"></o-text-input> -->
+        <o-combo attr="status" service="products" entity="product" keys="status" value-column="status" columns="status" visible-columns="status" read-only="no" required="yes"></o-combo>
+        <o-checkbox attr="avaliable" read-only="no"></o-checkbox>
       </o-row>
       <o-row>
         <o-text-input class="input-padding" attr="product_type" fxFlex="40" required="yes"></o-text-input>
