--- a/camerafront/src/app/main/profile/myproducts-detail/myproducts-detail.component.html
+++ b/camerafront/src/app/main/profile/myproducts-detail/myproducts-detail.component.html
@@ -14,7 +14,8 @@
         <!-- <o-date-input attr="STARTDATE" fxFlex="20"></o-date-input> -->
       </o-row>
       <o-row>
-        <o-text-input class="input-padding" attr="status" fxFlex="40" required="yes"></o-text-input>
+        <!-- <o-text-input class="input-padding" attr="status" fxFlex="40" required="yes"></o-text-input> -->
+        <o-combo attr="status" service="products" entity="productStatus" keys="id" value-column="id" columns="id;status" visible-columns="status" read-only="no" required="yes"></o-combo>
         <o-checkbox attr="avaliable" read-only="no"></o-checkbox>
         <!-- <o-text-input attr="avaliable" ></o-text-input>[data]="true" -->
         <!-- <o-text-input attr="avaliable" title="avaliable" type="boolean" render-true-value="check_circle"
