--- a/camerafront/src/app/main/profile/myproducts-new/myproducts-new.component.html
+++ b/camerafront/src/app/main/profile/myproducts-new/myproducts-new.component.html
@@ -11,7 +11,7 @@
       </o-row>
       <o-row>
         <!-- <o-text-input class="input-padding" attr="status" fxFlex="40" required="yes"></o-text-input> -->
-        <o-combo attr="status" service="products" entity="product" keys="status" value-column="status" columns="status" visible-columns="status" read-only="no" required="yes"></o-combo>
+        <o-combo attr="status" service="products" entity="productStatus" keys="id" value-column="id" columns="id;status" visible-columns="status" read-only="no" required="yes"></o-combo>
         <o-checkbox attr="avaliable" read-only="no"></o-checkbox>
       </o-row>
       <o-row>
