--- a/camerafront/src/app/main/profile/myproducts-detail/myproducts-detail.component.html
+++ b/camerafront/src/app/main/profile/myproducts-detail/myproducts-detail.component.html
@@ -32,6 +32,9 @@
              entity="customerType" keys="CUSTOMERTYPEID" columns="CUSTOMERTYPEID;DESCRIPTION" 
              visible-columns="DESCRIPTION" value-column="CUSTOMERTYPEID"></o-combo> -->
       </o-row>
+      <o-row>
+        <o-currency-input attr="price" fxFlex="20" currency-symbol="EUR" max-decimal-digits="2"></o-currency-input>
+      </o-row>
       <!-- <o-row>
           <o-email-input attr="EMAIL" fxFlex></o-email-input>
         </o-row>
