--- a/camerafront/src/app/main/main.component.scss
+++ b/camerafront/src/app/main/main.component.scss
@@ -1,9 +1,1 @@
-.night-mode {
-  background-color: #333;
-  color: #fff;
-}
-
-.day-mode {
-  background-color: #fff;
-  color: #333;
-}
+/* You can add main module styles to this file */
