--- a/camerafront/src/app/main/products/products-detail/products-detail.component.html
+++ b/camerafront/src/app/main/products/products-detail/products-detail.component.html
@@ -13,16 +13,16 @@ editable-detail="no" >
         <!-- <o-checkbox attr="avaliable" ></o-checkbox> -->
         <!-- <o-text-input attr="avaliable" title="avaliable" >
           <mat-icon oMatSuffix aria-hidden="false" aria-label="ZI" fontIcon="check_circle"></mat-icon>
-        </o-text-input>
+        </o-text-input> -->
         <o-text-input attr="avaliable" read-only="yes">
           <mat-icon oMatSuffix>sentiment_very_satisfied</mat-icon>
-        </o-text-input> -->
-        <div attr="avaliable" *ngIf="avaliable === 'true'">
+        </o-text-input>
+        <!-- <div attr="avaliable" *ngIf="avaliable === 'true'">
           <mat-icon>check_circle</mat-icon>
         </div>
         <div attr="avaliable" *ngIf="avaliable !== 'true'">
           <mat-icon>cancel</mat-icon>
-        </div>
+        </div> -->
         <!-- <div attr="avaliable" >
           <mat-icon>check_circle</mat-icon>
         </div> -->
