--- a/camerafront/src/app/main/products/products-detail/products-detail.component.html
+++ b/camerafront/src/app/main/products/products-detail/products-detail.component.html
@@ -1,7 +1,7 @@
 <o-form #form service="products" entity="product" keys="id_product"
 columns="id_product;product_name;price;status;product_type;avaliable;main_photo;plocation;tuser_user_;statusname"
 show-header="no" header-actions="R" show-header-navigation="no"  
-editable-detail="no" >
+editable-detail="no" (onDataLoaded)="loadData($event)">
   <o-text-input oHidden enabled="no" attr="id_product" sql-type="INTEGER"  ></o-text-input>
   <o-row>
     <o-column >
@@ -10,29 +10,16 @@ editable-detail="no" >
     <o-column >
       <o-row>
         <o-text-input attr="product_name" fxFlex></o-text-input>
-        <!-- <o-checkbox attr="avaliable" ></o-checkbox> -->
-        <!-- <o-text-input attr="avaliable" title="avaliable" >
-          <mat-icon oMatSuffix aria-hidden="false" aria-label="ZI" fontIcon="check_circle"></mat-icon>
-        </o-text-input> -->
         <o-text-input attr="avaliable" read-only="yes">
           <mat-icon oMatSuffix>sentiment_very_satisfied</mat-icon>
         </o-text-input>
-        <!-- <div attr="avaliable" *ngIf="avaliable === 'true'">
-          <mat-icon>check_circle</mat-icon>
-        </div>
-        <div attr="avaliable" *ngIf="avaliable !== 'true'">
-          <mat-icon>cancel</mat-icon>
-        </div> -->
-        <!-- <div attr="avaliable" >
-          <mat-icon>check_circle</mat-icon>
-        </div> -->
-        
       </o-row>
       <o-row>
         <o-text-input class="input-padding" attr="tuser_user_"></o-text-input>
       </o-row>
       <o-row>
-        <o-text-input attr="statusname"></o-text-input>
+        <!-- <o-text-input attr="statusname" title="status" sql-type="VARCHAR" translate="yes" type="translate" ></o-text-input> -->
+        <span>{{data.statusname | oTranslate}}</span>
       </o-row>
       <o-row>
         <o-text-input class="input-padding" attr="product_type"  ></o-text-input>
