--- a/camerafront/src/app/main/profile/myproducts-home/myproducts-home.component.html
+++ b/camerafront/src/app/main/profile/myproducts-home/myproducts-home.component.html
@@ -16,7 +16,8 @@
         </o-table-cell-renderer-image>
       </o-table-column>
       <o-table-column attr="avaliable" title="avaliable" type="boolean" render-true-value="check_circle"
-        render-false-value="highlight_off" render-type="icon" boolean-type="boolean"></o-table-column>
+        render-false-value="highlight_off" render-type="icon" boolean-type="boolean" ></o-table-column>
+        <o-table-column attr="statusname" title="status" type="translate"></o-table-column>
         <!-- <o-table-column attr="status">
           <o-table-cell-renderer-service service="products" entity="productStatus" value-column="id" columns="id;status" visible-columns="status">
         </o-table-cell-renderer-service>
