--- a/camerafront/src/app/main/products/products-home/products-home.component.css
+++ b/camerafront/src/app/main/products/products-home/products-home.component.css
@@ -1,8 +1,8 @@
 .container-item {
   width: 100%;
-  height: 400px;
-  background-color: antiquewhite;
-  border: 1px double black;
+  height: 90%;
+  background-color: rgb(119, 118, 116);
+  border: 1px double rgb(102, 21, 71);
   border-radius: 10px;
   .name {
     margin: 8px 0;
@@ -43,8 +43,8 @@
     }
   } */
    .mat-icon {
-    font-size: 18px;
-    height: 18px;
+    font-size: 30px;
+    height: 30px;
   }
 }
 .green-check {
