--- a/camerafront/src/app/main/products/products-home/products-home.component.html
+++ b/camerafront/src/app/main/products/products-home/products-home.component.html
@@ -2,7 +2,7 @@
   #grid
   attr="productGrid"
   title="Productos en alquiler"
-  cols="4"
+  cols="5"
   query-rows="8"
   show-page-size="true"
   page-size-options="4;8;16"
@@ -17,33 +17,34 @@
   pagination-controls="false"
   gutter-size="5px"
   fixed-header="yes"
-  [ngStyle]="{ height: '600px' }"
+  [ngStyle]="{ height: 'auto' }"
   service="products"
   entity="product"
   keys="id_product"
-  columns="id_product;product_name;price;status;product_type;avaliable;main_photo" 
-  visible-columns="main_photo;product_name;price;status;product_type;avaliable">
+  columns="id_product;product_name;price;status;product_type;avaliable;main_photo;plocation;tuser_user_;statusname" 
+  visible-columns="main_photo;product_name;price;status;product_type;avaliable"
+  detail-mode="none">
   <o-grid-item *ngFor="let list of grid.dataArray">
-    <o-column layout-padding class="container-item">
+    <o-column layout-padding (click)="openDetail(list)" class="container-item">
       <div class="image">
         <img src="data:image/png;base64,{{list.main_photo}}">
       </div>
-      <h4>{{ list.product_name }}</h4>
+      <h2>{{ list.product_name }}</h2>
       <div class="price">
-        <b>Precio: </b> <span> {{ list.price }} € </span>
+        <b>{{ 'price' | oTranslate}}: </b> <span> {{ list.price }} € </span>
       </div>
       <div class="status">
-        <b>Estado: </b><span>{{ list.status }} </span>
+        <b>{{ 'status' | oTranslate}}: </b><span>{{ list.statusname | oTranslate }} </span>
       </div>
       <div class="product_type">
-        <b>Producto: </b>
+        <b>{{ 'product_type' | oTranslate}}: </b>
         <span>{{ list.product_type }} </span>
       </div>
       <div class="plocation">
-        <b>Provincia: </b><span>{{ list.location }} </span>
+        <b>{{ 'plocation' | oTranslate}}: </b><span>{{ list.plocation }} </span>
       </div>
       <div class="avaliable">
-        <span><b>Disponible: </b> </span>
+        <span><b>{{ 'avaliable' | oTranslate}}: </b> </span>
         <span>
           <mat-icon
             [ngClass]="{
