--- a/camerafront/src/app/main/home/home.component.html
+++ b/camerafront/src/app/main/home/home.component.html
@@ -1,3 +1,9 @@
-<div fxLayout="row" layout-padding fxLayoutAlign="center center">
-  <p>Camera Rent</p>
+<div
+  fxLayout="row"
+  layout-padding
+  fxLayoutAlign="center center"
+  class="bg-image"
+>
+  <h1 class="AAA">CAMERA RENT</h1>
+  <p class="BBB">Alquiler de equipos audiovisuales</p>
 </div>
