Agregado campo "otros detalles" y arreglo en "produt_type"

--- a/camerafront/src/app/main/main.component.html
+++ b/camerafront/src/app/main/main.component.html
@@ -1,6 +1,6 @@
-<o-app-layout show-language-selector="no">
+<o-app-layout show-language-selector="yes">
   <router-outlet></router-outlet>
-  <o-app-layout-header position="start">
+  <o-app-layout-header position="end">
     <button *ngIf="light" mat-icon-button [matMenuTriggerFor]="menu">
       <mat-icon>light_mode</mat-icon>
     </button>
