--- a/camerafront/src/app/main/profile/myproducts-detail/myproducts-detail.component.html
+++ b/camerafront/src/app/main/profile/myproducts-detail/myproducts-detail.component.html
@@ -22,6 +22,9 @@
       <o-row>
         <o-currency-input attr="price" fxFlex="20" currency-symbol="EUR" max-decimal-digits="2"></o-currency-input>
       </o-row>
+      <o-row>
+        <o-text-input attr="pdetails" fxFlex></o-text-input>
+      </o-row>
     </o-column>
   </o-row>
 </o-form>
