--- a/camerafront/src/app/main/profile/myproducts-new/myproducts-new.component.html
+++ b/camerafront/src/app/main/profile/myproducts-new/myproducts-new.component.html
@@ -18,6 +18,9 @@
         <o-text-input class="input-padding" attr="product_type" fxFlex="40" required="yes"></o-text-input>
         <o-text-input attr="plocation" fxFlex></o-text-input>
       </o-row>
+      <o-row>
+        <o-text-input attr="pdetails" fxFlex></o-text-input>
+      </o-row>
     </o-column>
   </o-row>
 </o-form>
