--- a/camerafront/src/app/main/products/products-detail/products-detail.component.html
+++ b/camerafront/src/app/main/products/products-detail/products-detail.component.html
@@ -35,7 +35,7 @@ columns="id_product;product_name;price;status;product_type;avaliable;main_photo;
       <o-row>
         <!-- <o-text-input class="input-padding" attr="product_type"  ></o-text-input> -->
         <b>{{ 'product_type' | oTranslate}}</b>
-        <span>: {{data.product_type}}</span>
+        <span>: {{data.product_type | oTranslate}}</span>
       </o-row>
       <o-row>
         <!-- <o-text-input attr="plocation"></o-text-input> -->
@@ -46,6 +46,10 @@ columns="id_product;product_name;price;status;product_type;avaliable;main_photo;
         <!-- <o-currency-input attr="price"  currency-symbol="EUR" max-decimal-digits="2"></o-currency-input> -->
         <b>{{ 'price' | oTranslate}}</b>
         <span>: {{data.price}}€</span>
+      </o-row>
+      <o-row>
+        <b>{{ 'pdetails' | oTranslate}}</b>
+        <span>: {{data.pdetails}}</span>
       </o-row>
     </o-column>
   </o-row>
