--- a/camerafront/src/app/main/products/products-home/products-home.component.html
+++ b/camerafront/src/app/main/products/products-home/products-home.component.html
@@ -21,7 +21,7 @@
   service="products"
   entity="product"
   keys="id_product"
-  columns="id_product;product_name;price;status;product_type;avaliable;main_photo;plocation;tuser_user_;statusname" 
+  columns="id_product;product_name;price;status;product_type;avaliable;main_photo;plocation;tuser_user_;statusname;pdetails" 
   visible-columns="main_photo;product_name;price;status;product_type;avaliable"
   detail-mode="none">
   <o-grid-item *ngFor="let list of grid.dataArray">
@@ -38,7 +38,7 @@
       </div>
       <div class="product_type">
         <b>{{ 'product_type' | oTranslate}}: </b>
-        <span>{{ list.product_type }} </span>
+        <span>{{list.product_type | oTranslate}}</span>
       </div>
       <div class="plocation">
         <b>{{ 'plocation' | oTranslate}}: </b><span>{{ list.plocation }} </span>
