--- a/camerafront/src/app/main/products/products-home/products-home.component.css
+++ b/camerafront/src/app/main/products/products-home/products-home.component.css
@@ -1,63 +1,101 @@
 .container-item {
   width: 100%;
-  height: 90%;
-  background-color: rgb(119, 118, 116);
+  height: 95%;
+  /* background-color: linear-gradient(to right, #0c4411, #00ff37); */
+  /* background-color: rgb(119, 118, 116); */
+  background-image: linear-gradient(to top left, #ac7583, #5b40be);
   border: 1px double rgb(102, 21, 71);
-  border-radius: 10px;
-  .item-div {
-    margin: 3px;
-  }
-  .name {
-    margin: 8px 0;
-    font-size: 0.9em;
-  }
-  /* .image{
-    height: 150px;
-    width: 150px;
-    display:contents;
-  } */
+  border-top-left-radius: 50px;
+  /* display: flex;
+  flex-direction: column; */
+  /* align-items: center;
+  overflow: hidden; */
+  /* justify-content: flex-end; */
+  box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.7);
+
   .image {
-    width:100%;
-    weight: 1; 
-    overflow: hidden; 
+    height: 55%;
+    width: auto;
+    /* margin-right: 2px;
+    margin-left: 2px; */
+    overflow: hidden;
+    /* margin: 5px; */
+    margin: 5px 5px 0px 5px;
+    /* flex: 1; */
+    /* max-width: 50%; */
+    /* max-height: 50%; */
+    box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.7);
   }
-  .details{
-    weight: 1;
-  }
-  
+
   .image img {
-    /* width: 100%; Haz que la imagen ocupe el 100% del ancho del contenedor */
-    max-height: 50%;
-    border-radius: 10px;
+
+    border-top-left-radius: 50px;
+    object-fit: cover;
+    width: 100%;
+    height: 100%;
   }
-  /* img{
-    height: 150px;
-    width: 150px;
-    display:contents;
-  } */
-  /* .website {
-    font-size: 0.7em;
-    display: flex;
-    align-items: center;
-    color: #4b4b4b;
-    mat-icon {
-      padding-right: 8px;
-    }
-    span {
-      text-overflow: ellipsis;
-      white-space: nowrap;
-      overflow: hidden;
-    }
-  } */
-   .mat-icon {
-    font-size: 30px;
+
+  .name {
+    /* margin-bottom: 8px; */
+    /* font-size: 0.9em; */
+    margin-top: 5px;
+    height: 15%;
+    font-size: 150%;
+    text-align: center;
+    text-shadow: 2px 2px 4px rgba(0, 0, 0, 1);
+  }
+  .details {
+    /* flex: 1; */
+    height: 20%;
+    /* overflow: hidden; */
+    /* margin-top: 10px; */
+    text-align: center;
+    text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);
+  }
+
+  .details b {
+    /* text-overflow: ellipsis;
+    white-space: nowrap;
+    overflow: hidden; */
+  }
+
+  .details .mat-icon {
+    /* font-size: 30px; */
     height: 30px;
+    width: 30px;
+    vertical-align: middle;
+    -webkit-background-clip: text;
+    /* background-clip: text; */
+    color: transparent;
+    text-shadow: none;
+
+  }
+  .price{
+    /* justify-content: flex-end; */
+    max-height: 10%;
+    text-align: right;
+    font-size: 150%;
+    margin: 1px 5px 1px 1px;
+    overflow: hidden;
+    text-shadow: 2px 2px 4px rgba(0, 0, 0, 1);
+  }
+  .price .number{
+    font-size: 200%;
+  }
+  .price .day{
+    font-size: 50%;
   }
 }
+
 .green-check {
-  color: green;
+  background: linear-gradient(to right, #38c725, #b2d8aa);
+  /* Cambia los códigos de color según tus preferencias */
+
+  /* color:
+  background-image: linear-gradient(to top left, #85ac75, #5b40be); */
 }
 
 .red-check {
-  color: red;
-} 
+  /* color: red; */
+  background: linear-gradient(to right, #ff4646, #d6aea9);
+}
