--- a/camerafront/src/app/main/products/products-home/products-home.component.html
+++ b/camerafront/src/app/main/products/products-home/products-home.component.html
@@ -7,43 +7,45 @@
   visible-columns="main_photo;product_name;price;status;product_type;avaliable" detail-mode="none">
   <o-grid-item *ngFor="let list of grid.dataArray">
     <o-column layout-padding (click)="openDetail(list)" class="container-item">
-      <div class="item-div">
-        <div class="image">
-          <img src="data:image/png;base64,{{list.main_photo}}">
+      <!-- <div class="item-div"> -->
+      <div class="image">
+        <img src="data:image/png;base64,{{list.main_photo}}">
+      </div>
+      <div class="name">
+        <b>{{ list.product_name }}</b>
+      </div>
+      <div class="details">
+
+
+        <div class="status">
+          <span>{{ 'status' | oTranslate}}: </span><b>{{ list.statusname | oTranslate }} </b>
         </div>
-        <div class="details">
-          <div class="name">
-            <h2>{{ list.product_name }}</h2>
-          </div>
-          <div class="price">
-            <b>{{ 'price' | oTranslate}}: </b> <span> {{ list.price }} € </span>
-          </div>
-          <div class="status">
-            <b>{{ 'status' | oTranslate}}: </b><span>{{ list.statusname | oTranslate }} </span>
-          </div>
-          <div class="product_type">
-            <b>{{ 'product_type' | oTranslate}}: </b>
-            <span>{{list.product_type | oTranslate}}</span>
-          </div>
-          <div class="plocation">
-            <b>{{ 'plocation' | oTranslate}}: </b><span>{{ list.plocation }} </span>
-          </div>
-          <div class="avaliable">
-            <span><b>{{ 'avaliable' | oTranslate}}: </b> </span>
-            <span>
-              <mat-icon [ngClass]="{
+        <div class="product_type">
+          <span>{{ 'product_type' | oTranslate}}: </span><b>{{list.product_type | oTranslate}}</b>
+        </div>
+        <div class="plocation">
+          <span>{{ 'plocation' | oTranslate}}: </span><b>{{ list.plocation }} </b>
+        </div>
+        <div class="avaliable">
+          <span>{{ 'avaliable' | oTranslate}}: </span> 
+          <b>
+            <mat-icon [ngClass]="{
                 'green-check': list.avaliable,
                 'red-check': !list.avaliable
               }">
-                {{ list.avaliable ? "check_circle" : "cancel" }}
-              </mat-icon>
-            </span>
-          </div>
-          <div class="body">
+              {{ list.avaliable ? "check_circle" : "cancel" }}
+            </mat-icon>
+          </b>
+
+          <!-- <div class="body">
             {{ list.body }}
-          </div>
+          </div> -->
         </div>
       </div>
+      <div class="price">
+        <b>desde </b><b class="number">{{ list.price }}</b><b>€</b><b class="day">/dia</b>
+      </div>
+      <!-- </div> -->
     </o-column>
   </o-grid-item>
 </o-grid>
