cambios etiqueta new product

--- a/camerafront/src/app/main/home/home.component.html
+++ b/camerafront/src/app/main/home/home.component.html
@@ -5,5 +5,5 @@
   class="bg-image"
 >
   <h1 class="AAA">CAMERA RENT</h1>
-  <p class="BBB">Alquiler de equipos audiovisuales</p>
+  <h3 class="BBB">Alquiler de equipos audiovisuales a particulares y empresas cerca de ti</h3>
 </div>
