--- a/camerafront/src/app/main/products/products-home/products-home.component.css
+++ b/camerafront/src/app/main/products/products-home/products-home.component.css
@@ -3,9 +3,10 @@
   height: 95%;
   /* background-color: linear-gradient(to right, #0c4411, #00ff37); */
   /* background-color: rgb(119, 118, 116); */
-  background-image: linear-gradient(to top left, #ac7583, #5b40be);
-  border: 1px double rgb(102, 21, 71);
+  background-image: linear-gradient(to top left, #bb958c, #3d9d91);
+  border: 1px double rgb(21, 102, 91);
   border-top-left-radius: 50px;
+  border-top-right-radius: 50px;
   /* display: flex;
   flex-direction: column; */
   /* align-items: center;
@@ -26,11 +27,15 @@
     /* max-width: 50%; */
     /* max-height: 50%; */
     box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.7);
+    border-top-left-radius: 50px;
+    border-top-right-radius: 50px;
+    
   }
 
   .image img {
 
     border-top-left-radius: 50px;
+    border-top-right-radius: 50px;
     object-fit: cover;
     width: 100%;
     height: 100%;
