--- a/camerafront/src/app/main/profile/myproducts-new/myproducts-new.component.html
+++ b/camerafront/src/app/main/profile/myproducts-new/myproducts-new.component.html
@@ -2,21 +2,24 @@
   show-header-navigation="no" header-actions="R;I;U;D">
   <o-row>
     <o-column>
-      <o-image id="main_photo" attr="main_photo" empty-image="assets/images/no-image.png" sql-type="OTHER" image-type="base64"></o-image>
+      <o-image id="main_photo" attr="main_photo" empty-image="assets/images/no-image.png" sql-type="OTHER"
+        image-type="base64"></o-image>
     </o-column>
     <o-column fxFlex>
       <o-row>
-        <o-text-input class="input-padding" attr="product_name"required="yes"></o-text-input>
-        <!-- <o-date-input attr="STARTDATE" fxFlex="20"></o-date-input> -->
+        <o-text-input class="input-padding" attr="product_name" required="yes"></o-text-input>
       </o-row>
       <o-row>
-        <!-- <o-text-input class="input-padding" attr="status" fxFlex="40" required="yes"></o-text-input> -->
-        <o-combo attr="status" service="products" entity="productStatus" keys="id" value-column="id" columns="id;status" visible-columns="status" read-only="no" required="yes"></o-combo>
+        <o-combo attr="status" service="products" entity="productStatus" keys="id" value-column="id" columns="id;status"
+          visible-columns="status" read-only="no" required="yes"></o-combo>
         <o-checkbox attr="avaliable" read-only="no"></o-checkbox>
       </o-row>
       <o-row>
-        <o-text-input class="input-padding" attr="product_type" fxFlex="40" required="yes"></o-text-input>
+        <o-combo attr="product_type" [static-data]="productTypeArray" value-column="{{ 'typeText' | oTranslate}}" columns="{{ 'typeText' | oTranslate}}" visible-columns="{{ 'typeText' | oTranslate}}" read-only="no" required="yes" null-selection="no" translate="yes"></o-combo>
         <o-text-input attr="plocation" fxFlex></o-text-input>
+      </o-row>
+      <o-row>
+        <o-currency-input attr="price" fxFlex="20" currency-symbol="EUR" max-decimal-digits="2"></o-currency-input>
       </o-row>
       <o-row>
         <o-text-input attr="pdetails" fxFlex></o-text-input>
@@ -24,3 +27,5 @@
     </o-column>
   </o-row>
 </o-form>
+
+
