Estilos de ProductDetails

--- a/camerafront/src/app/login/login.component.scss
+++ b/camerafront/src/app/login/login.component.scss
@@ -22,7 +22,7 @@
     overflow: auto;
 
     .login-bg-container {
-      background-image: url('^assets/images/login_bg.png');
+      background-image:url(https://cdn.discordapp.com/attachments/1153576792486064158/1167019126393425980/pexels-rogelio-rosa-2831711.jpg?ex=654c9a41&is=653a2541&hm=e1705c8110a929e0c31fbce917dc22c5cbd30fd60f020077d92e241ccace7d39&);
       width: calc(100% - 640px);
       background-repeat: no-repeat;
       background-size: cover;
