--- a/camerafront/src/app/main/products/products-home/products-home.component.html
+++ b/camerafront/src/app/main/products/products-home/products-home.component.html
@@ -43,7 +43,7 @@
         </div>
       </div>
       <div class="price">
-        <b>desde </b><b class="number">{{ list.price }}</b><b>€</b><b class="day">/dia</b>
+        <b>{{ 'from' | oTranslate}} </b><b class="number">{{ list.price }}</b><b>€</b><b class="day">/{{ 'day' | oTranslate}} </b>
       </div>
       <!-- </div> -->
     </o-column>
