--- a/camerafront/src/app/main/products/products-detail/products-detail.component.css
+++ b/camerafront/src/app/main/products/products-detail/products-detail.component.css
@@ -1,7 +1,72 @@
-.green-check {
-    color: green;
+.container {
+  text-align: center;
+  /* height: auto; */
+  width: 100%;
+  height: 100%;
+  background-image: linear-gradient(to top left, #ac7583, #5b40be);
+  overflow: hidden;
+  display: flex;
+  flex-direction: column; 
+  align-items: center;
+
+  /* .container2{
+    height: 100%;
+  } */
+
+  .img-container {
+    /* height: auto; */
+    height: 100%;
+    width: 80%;
+    overflow: hidden;
   }
-  
-  .red-check {
-    color: red;
-  } 
+
+  .img-container  img {
+      object-fit: cover;
+      /* width: 100%; */
+      height: 100%;
+      width: 100%;
+    }
+    .data-container {
+      /* height: 100%; */
+      width: 20%;
+      margin-left: 5%;
+
+      .name-container {
+        font-size: 150%;
+        text-align: center;
+        text-shadow: 2px 2px 4px rgba(0, 0, 0, 1);
+      }
+
+      .detail-container {
+        text-align: center;
+        text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);
+      }
+    }
+
+    .price-container {
+      /* justify-content: flex-end; */
+      /* max-height: 10%; */
+      text-align: right;
+      font-size: 150%;
+      margin: 1px 6px 1px 1px;
+      overflow: hidden;
+      text-shadow: 2px 2px 3px rgba(0, 0, 0, 1);
+    }
+
+    .price .number {
+      font-size: 180%;
+    }
+
+    .price .day {
+      font-size: 50%;
+    }
+  }
+
+
+.green-check {
+  color: green;
+}
+
+.red-check {
+  color: red;
+}
