--- a/camerafront/src/app/main/profile/myproducts-detail/myproducts-detail.component.html
+++ b/camerafront/src/app/main/profile/myproducts-detail/myproducts-detail.component.html
@@ -14,11 +14,11 @@
       </o-row>
       <o-row>
         <o-combo attr="status" service="products" entity="productStatus" keys="id" value-column="id" columns="id;status"
-          visible-columns="status" read-only="no" required="yes"></o-combo>
+          visible-columns="status" read-only="no" required="yes" translate="yes" null-selection="no"></o-combo>
         <o-checkbox attr="avaliable" read-only="no"></o-checkbox>
       </o-row>
       <o-row>
-        <o-combo attr="product_type" [static-data]="productTypeArray" value-column="{{ 'typeText' | oTranslate}}" columns="{{ 'typeText' | oTranslate}}" visible-columns="{{ 'typeText' | oTranslate}}" read-only="no" required="yes" null-selection="no" translate="yes"></o-combo>
+        <o-combo attr="product_type" [static-data]="productTypeArray" value-column="typeText" columns="typeText" visible-columns="typeText" read-only="no" required="yes" null-selection="no" translate="yes"></o-combo>
         <o-text-input attr="plocation" fxFlex></o-text-input>
       </o-row>
       <o-row>
