cambio home y color en product details

--- a/camerafront/src/app/main/products/products-detail/products-detail.component.css
+++ b/camerafront/src/app/main/products/products-detail/products-detail.component.css
@@ -3,7 +3,7 @@
   /* height: auto; */
   width: 100%;
   height: 100%;
-  background-image: linear-gradient(to top left, #ac7583, #5b40be);
+  background-image: linear-gradient(to top left, #bb958c, #3d9d91);
   overflow: hidden;
   display: flex;
   flex-direction: column; 
